After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783473 - gtk-doc comment lists too few arguments for signals of BaconVideoWidget
gtk-doc comment lists too few arguments for signals of BaconVideoWidget
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
unspecified
Other FreeBSD
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-06-06 13:24 UTC by Ting-Wei Lan
Modified: 2017-06-06 14:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Fix gtk-doc comments for signals of BaconVideoWidget (5.02 KB, patch)
2017-06-06 13:30 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2017-06-06 13:24:32 UTC
This error causes incorrect names to be assigned to function arguments when using the old perl-based gtkdoc-mkdb, and it causes the new python-based gtkdoc-mkdb to crash with following messages:

gmake[3]: Entering directory '/home/lantw44/gnome/build/totem/docs/reference'
   DOC   Building XML
Traceback (most recent call last):
  • File "/home/lantw44/gnome/devinstall/bin/gtkdoc-mkdb", line 63 in <module>
    mkdb.Run(options)
  • File "/home/lantw44/gnome/devinstall/share/gtk-doc/python/gtkdoc/mkdb.py", line 284 in Run
    changed, book_top, book_bottom = OutputDB(os.path.join(ROOT_DIR, MODULE + "-sections.txt"), options)
  • File "/home/lantw44/gnome/devinstall/share/gtk-doc/python/gtkdoc/mkdb.py", line 727 in OutputDB
    sig_synop, sig_desc = GetSignals(symbol)
  • File "/home/lantw44/gnome/devinstall/share/gtk-doc/python/gtkdoc/mkdb.py", line 3328 in GetSignals
    param_name = list(sourceparams)[j]   # keys as list
IndexError: list index out of range
gmake[3]: *** [Makefile:1223: sgml-build.stamp] Error 1
Comment 1 Ting-Wei Lan 2017-06-06 13:30:15 UTC
Created attachment 353258 [details] [review]
docs: Fix gtk-doc comments for signals of BaconVideoWidget
Comment 2 Philip Withnall 2017-06-06 14:04:26 UTC
Review of attachment 353258 [details] [review]:

++
Comment 3 Ting-Wei Lan 2017-06-06 14:31:52 UTC
Attachment 353258 [details] pushed as eabd5fc - docs: Fix gtk-doc comments for signals of BaconVideoWidget