docs: Fix gtk-doc comments for signals of BaconVideoWidget

https://bugzilla.gnome.org/show_bug.cgi?id=783473